--- a/mia/Base.lproj/Profile.storyboard
+++ b/mia/Base.lproj/Profile.storyboard
@@ -482,7 +482,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ANO-k0-Gpj">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="P-DefaultCover" translatesAutoresizingMaskIntoConstraints="NO" id="ANO-k0-Gpj">
                                             <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                         </imageView>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hwb-Y7-qvF">
@@ -526,6 +526,7 @@
     <resources>
         <image name="M-PlayIcon" width="35" height="35"/>
         <image name="P-CommentIcon" width="20" height="20"/>
+        <image name="P-DefaultCover" width="100" height="100"/>
         <image name="P-DeleteIcon" width="20" height="20"/>
         <image name="P-SeeIcon" width="20" height="20"/>
         <image name="P-UnFavoriteIcon" width="20" height="20"/>
